# fudousan

./: .gitignore  README.md  manage.py  pyproject.toml
fudousan/: asgi.py  settings.py  urls.py  wsgi.py
koukoku/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
templates/: base.html  base_navbar.html  estate_create.html  estate_detail.html  estate_list.html  estate_update.html  home.html  profile_update.html
templates/registration/: login.html  password_reset_form.html  register.html
users/: forms.py  models.py  pipelines.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20230402_0031.py  0003_alter_user_department.py  0004_remove_user_patronymic.py
