[tool.poetry]
name = "fudousan"
version = "0.1.0"
description = ""
authors = ["Nakadzima9 <pascal.german@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2.18"
python-decouple = "^3.8"
dj-database-url = "^1.3.0"
psycopg2-binary = "^2.9.6"
pillow = "^9.5.0"
pip = "^23.1"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
django-sass-processor = "^1.2.2"
social-auth-app-django = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
